# AI-Travel-Planner

./: .gitignore  MCP_ARCHITECTURE.txt  MCP_BUGFIXES.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_PROTOCOL.md  MCP_QUICKSTART.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt
envs/: .env.ci
ops/: commit_history_example.txt
scripts/: db_migrate.py  generate_report.py  local_run.sh  seed_demo_data.py
src/: __init__.py  interactive_planner.py  main.py
src/a2a/: protocol.py
src/a2a/adapters/: __init__.py  in_memory.py
src/agents/: __init__.py  llm_prompts.py
src/agents/adk_agent/: agent.py
src/agents/crewai_agent/: __init__.py  agent.py  handlers.py
src/agents/research_agent/: agent.py
src/callbacks/: logger_adapter.py  monitoring.py
src/config/: settings.py
src/integrations/: calculator.py  duckduckgo_client.py  gemini_flash_client.py  gemini_research.py  groq_client.py  mcp_client.py  mcp_tool_adapter.py
src/logging/: json_logger.py
src/models/: itinerary.py
src/state/: store.py
src/tests/: conftest.py  test_a2a_protocol.py  test_callbacks.py  test_integration.py  test_models.py  test_state_store.py
src/workflows/: dynamic_planner.py
